--- a/Makefile.common
+++ b/Makefile.common
@@ -15,8 +15,7 @@ cvs dist configure configure.in configure.files subdirs package-messages package
 	  done; \
 	  admindir=$$admindir/admin; \
 	  if test -f $$admindir/cvs.sh; then :; else \
-	    echo "Can't find the admin/ directory in any parent of the"; \
-	    echo "current directory.  Please set it with admindir=..."; \
+	    echo -e "Can't find the admin/ directory in any parent of the\ncurrent directory.  Please set it with admindir=..."; \
 	    exit 1; \
 	  fi; \
 	fi; \
